--- a/app/config/packages/doctrine.yaml
+++ b/app/config/packages/doctrine.yaml
@@ -17,4 +17,4 @@ doctrine:
                 alias: App
         dql:
             datetime_functions:
-                DAY: DoctrineExtensions\Query\Mysql\Date
+                DATE: DoctrineExtensions\Query\Mysql\Date
